spec/e2e/field/set_on_bool.lit
true.foo = "value"; # error: [line 1] Only instances have fields.
